[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wbutils"
version = "0.1.0"
description = "Inspect wandb projects: discover metrics, deduplicate runs, generate reports and LaTeX tables"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["wandb", "machine-learning", "experiment-tracking", "metrics", "reporting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "wandb>=0.15.0",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
wbutils = "wbutils.cli:main"

[project.urls]
Repository = "https://github.com/your-username/wbutils"

[tool.setuptools.packages.find]
include = ["wbutils*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]